--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -6,7 +6,7 @@
             <div class="row gx-5 gy-5">
                 <div class="col-md-4">
                     <div class="inner position-relative  ">
-                        <img src="images/poert1.png" alt="" class="w-100 rounded-2">
+                        <img src="images/port1.png" alt="" class="w-100 rounded-2">
                         <div class="layer d-flex justify-content-center align-items-center rounded-2">
                             <i class="fa-solid fa-plus fa-6x"></i>
                         </div>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="inner position-relative ">
-                        <img src="images/poert1.png" alt="" class="w-100 rounded-2">
+                        <img src="images/port1.png" alt="" class="w-100 rounded-2">
                         <div class="layer d-flex justify-content-center align-items-center rounded-2">
                             <i class="fa-solid fa-plus fa-6x"></i>
                         </div>
